Bug 291868 - (Color Schemas) Background colors are not exported/imported correctly
Summary: (Color Schemas) Background colors are not exported/imported correctly
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-18 14:46 UTC by Casey Link
Modified: 2012-03-06 20:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Casey Link 2012-01-18 14:46:44 UTC
Version:           unspecified (using KDE 4.7.4) 
OS:                Linux

When you set the background colors for a schema then export the schema and re-import, the background colors are lost.

This is a major bug, as it effectively cripples the sharing of kate color schemas.


Reproducible: Always

Steps to Reproduce:
1. Start with a clean color schme (backup then rm .kde4/share/config/kateschemarc  and katesyntaxhighlightingrc)

2. Edit kate settings -> Fonts and Colors

3. Under the "Colors" tab change the "Normal Text" background under the "Text Area Background" heading to a color you will remember. I fancy bright Magenta #FF00FF. This color will be lost.

4. Switch to the "Normal Text Styles" tab and change some colors there. These colors will be preserved.

5. Export the new style to a file.

6. Close kate/kdevelop/whatever, and prune your .kde4/share/config/kateschemarc  and katesyntaxhighlightingrc once again

7. Restart kate/kdevelop/whatever and re-import your color scheme

Actual Results:  
The background color (in my case bright Magenta) is not imported.

The colors under "Normal Text Styles" are correctly imported.

Expected Results:  
All background colors should be exported and imported along with the other colors in a schema.
Comment 1 Dominik Haumann 2012-03-06 20:08:00 UTC
Git commit 825bee52c5d62de68f708d8b2c959df3af5491ad by Dominik Haumann.
Committed on 06/03/2012 at 21:05.
Pushed by dhaumann into branch 'master'.

refactor import / export of color schemas

Now, the "Colors" tab is exported/imported as well
FIXED-IN: 4.9.0

M  +228  -131  part/schema/kateschemaconfig.cpp
M  +9    -3    part/schema/kateschemaconfig.h

http://commits.kde.org/kate/825bee52c5d62de68f708d8b2c959df3af5491ad