refactor import / export of color schemas

Now, the "Colors" tab is exported/imported as well

BUG: 291868
FIXED-IN: 4.9.0